tests/fixtures/invalid/round_none_bool.py
# Cannot call round() with None, Bool
x = round(None, True)
